tests/ui/compound-index-too-many-fields.stderr
error: Compound index 'email#name' does not include current field 'age'.
 --> tests/./ui/compound-index-too-many-fields.rs:9:36
  |
9 |     #[cipherstash(query = "exact", compound = "email#name")]
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^
